Fix knockout collapsing margins in ie 11

--- a/src/bem/blocks/sv-body.scss
+++ b/src/bem/blocks/sv-body.scss
@@ -10,8 +10,8 @@
   }
 }
 .sv-body__page {
-  margin-top: 3.875em;
-  margin-bottom: 0.63em;
+  padding-top: 3.875em;
+  padding-bottom: 0.63em;
 }
 .sv-body__progress {
   margin-bottom: 2em;
